# ai-editor

./: .gitignore  .prettierrc  AGENTS.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.codex/: config.example.toml  config.toml
.codex/agents/: architect.toml  coder.toml  documenter.toml  reviewer.toml  tester.toml
docs/: AGENT_WORKFLOW.md  ARCHITECTURE.md  CODING_STANDARDS.md  CONTEXT_BUDGET.md  MVP_1_SCOPE.md  PROJECT_OVERVIEW.md  ROADMAP.md  SECURITY_AND_PERMISSIONS.md  TASK_PROMPT_TEMPLATE.md  TASK_SPEC_TEMPLATE.md  TESTING_STRATEGY.md  UI_DESIGN_GUIDE.md
docs/CODEMAP/: README.md  app.md  autocomplete.md  editor.md  models-runtime.md  testing.md
docs/DECISIONS/: ADR-0001-tech-stack.md  ADR-0002-autocomplete-architecture.md  ADR-0003-dictionary-autocomplete-fallback.md  ADR-0004-managed-llama-cpp-runtime.md  ADR-0005-model-install-runtime-vertical-slice.md
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: README.md
src-tauri/src/: hardware.rs  lib.rs  main.rs  model_storage.rs  runtime.rs
src/app/: EditorAutocompleteController.test.ts  EditorAutocompleteController.ts  appStatus.ts  autocompleteConfig.ts  createAutocompleteService.test.ts  createAutocompleteService.ts  createEditorAutocompleteController.ts
src/autocomplete/: AutocompleteService.test.ts  AutocompleteService.ts  DisabledSuggestionProvider.ts  MockSuggestionProvider.ts  OllamaSuggestionProvider.ts  SuggestionProvider.ts  ranking.ts  textContext.ts  types.ts
src/editor/: SuggestionPopup.tsx  (+1 more)
(+25 files in other folders)
