[package]
name = "ai-editor"
version = "0.1.0"
description = "Local desktop text editor with Russian autocomplete"
authors = ["ai-editor contributors"]
edition = "2021"

[lib]
name = "ai_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
